--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,15 +1,34 @@
 {
-  "name": "backend",
+  "name": "devcourses-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init",
+    "test:prepare": "prisma generate --schema=prisma/schema.test.prisma && prisma db push --schema=prisma/schema.test.prisma",
+    "test": "npm run test:prepare && vitest"  
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.9.3"
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.7.0",
+    "@types/supertest": "^6.0.3",
+    "prisma": "^6.16.3",
+    "supertest": "^7.1.4",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.16.3",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
   }
 }
