--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,13 +9,14 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
     "test:prepare": "prisma generate --schema=prisma/schema.test.prisma && prisma db push --schema=prisma/schema.test.prisma",
-    "test": "npm run test:prepare && vitest"  
+    "test": "npm run test:prepare && vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.0",
     "@types/supertest": "^6.0.3",
@@ -26,6 +27,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@devcourses/domain": "file:../../domain",
     "@prisma/client": "^6.16.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
