--- a/domain/package.json
+++ b/domain/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "domain",
+  "name": "@devcourses/domain",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "test": "vitest",
     "test:coverage": "vitest run --coverage"  },
   "keywords": [],
