--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,7 +9,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
     "test:prepare": "prisma generate --schema=prisma/schema.test.prisma && prisma db push --schema=prisma/schema.test.prisma",
-    "test": "npm run test:prepare && vitest"
+    "test": "npm run test:prepare && vitest",
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.7.0",
+    "@types/node": "^24.7.2",
     "@types/supertest": "^6.0.3",
     "prisma": "^6.16.3",
     "supertest": "^7.1.4",
