--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -32,6 +32,8 @@
     "@prisma/client": "^6.17.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.12"
   }
 }
