--- a/package.json
+++ b/package.json
@@ -5,19 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
+    "@storybook/addon-a11y": "^9.1.13",
+    "@storybook/addon-docs": "^9.1.13",
+    "@storybook/addon-vitest": "^9.1.13",
+    "@storybook/react-vite": "^9.1.13",
     "autoprefixer": "^10.4.21",
+    "eslint-plugin-storybook": "^9.1.13",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "storybook": "^9.1.13",
     "tailwindcss": "^3.4.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@vitest/browser": "^4.0.1",
+    "playwright": "^1.56.1",
+    "@vitest/coverage-v8": "^4.0.1"
   }
 }
