--- a/apps/frontend/devcourses/package.json
+++ b/apps/frontend/devcourses/package.json
@@ -13,6 +13,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@devcourses/domain": "file:../../../domain",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "react": "^19.1.1",
