--- a/apps/frontend/devcourses/package.json
+++ b/apps/frontend/devcourses/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4"
