--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,7 +13,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@devcourses/domain": "file:../../../domain",
+    "@devcourses/domain": "file:../../domain",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
@@ -23,7 +23,12 @@
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/js": "^9.36.0",
+    "@storybook/addon-a11y": "^9.1.13",
+    "@storybook/addon-docs": "^9.1.13",
+    "@storybook/addon-vitest": "^9.1.13",
+    "@storybook/react-vite": "^9.1.13",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
@@ -33,12 +38,18 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-storybook": "^9.1.13",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "storybook": "^9.1.13",
     "tailwindcss": "^3.4.18",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
-    "vitest": "^4.0.1"
+    "vitest": "^4.0.1",
+    "@vitest/browser": "^4.0.1",
+    "playwright": "^1.56.1",
+    "@vitest/coverage-v8": "^4.0.1"
   }
 }
