--- a/domain/tsconfig.json
+++ b/domain/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": { 
     "baseUrl": ".", 
     "outDir": "dist", 
-    "rootDir": "src" 
+    "rootDir": "src", 
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
   }, 
   "include": ["src"] 
 }
