--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,7 +20,8 @@
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
@@ -33,13 +34,17 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-router-hash-link": "^2.4.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/browser": "^4.0.1",
+    "@vitest/coverage-v8": "^4.0.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "eslint-plugin-storybook": "^9.1.13",
     "globals": "^16.4.0",
+    "playwright": "^1.56.1",
     "postcss": "^8.5.6",
     "storybook": "^9.1.13",
     "tailwindcss": "^3.4.18",
@@ -47,9 +52,6 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
-    "vitest": "^4.0.1",
-    "@vitest/browser": "^4.0.1",
-    "playwright": "^1.56.1",
-    "@vitest/coverage-v8": "^4.0.1"
+    "vitest": "^4.0.1"
   }
 }
