--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": { 
     "baseUrl": ".", 
     "outDir": "dist", 
-    "rootDir": "src",
+    "rootDir": ".",
     "types": ["node"]
   }, 
-  "include": ["src"] 
+  "include": ["src", "prisma"] 
 }
 
