--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,8 @@ services:
     volumes:
       - devcourses-store-backend-data:/devcourses-store/data
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - devcourses-net
 
